#ADD_SUBDIRECTORY(be_plugin_vulkan_old)

# ADD_SUBDIRECTORY(be_plugin_vulkan)
# ADD_SUBDIRECTORY(be_plugin_bullet_bodies)
# ADD_SUBDIRECTORY(be_plugin_app_opengl)
# ADD_SUBDIRECTORY(be_plugin_app_vulkan)
# ADD_SUBDIRECTORY(be_plugin_alsa)
# ADD_SUBDIRECTORY(be_plugin_app_alsa)

# ADD_SUBDIRECTORY(be_plugin_test)
# ADD_SUBDIRECTORY(be_plugin_app_attractors)
# ADD_SUBDIRECTORY(be_plugin_app_stunt_coureur)

# ADD_SUBDIRECTORY(be_plugin_thread)
# ADD_SUBDIRECTORY(be_plugin_opengl)
ADD_SUBDIRECTORY(be_plugin_opengl_modern)
ADD_SUBDIRECTORY(be_plugin_qt6)
ADD_SUBDIRECTORY(be_plugin_system)
ADD_SUBDIRECTORY(be_plugin_bullet)
ADD_SUBDIRECTORY(be_plugin_sdl)
ADD_SUBDIRECTORY(be_plugin_brainz)
ADD_SUBDIRECTORY(be_plugin_qwt)

ADD_SUBDIRECTORY(be_plugin_app_admin_window)
ADD_SUBDIRECTORY(be_plugin_app_sysmon)

ADD_SUBDIRECTORY(be_plugin_app_critterding)
ADD_SUBDIRECTORY(be_plugin_app_critterding_threads)
